force-app/main/default/objects/SensorReadings__b/SensorReadings__b.object-meta.xml
<CustomObject>
    <label>SensorReadings</label>
    <pluralLabel>SensorReadings</pluralLabel>
</CustomObject>