force-app/main/default/objects/SensorReadings__b/fields/ReadingDateTime__c.field-meta.xml
<CustomField>
    <fullName>ReadingDateTime__c</fullName>
    <label>ReadingDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>