force-app/main/default/objects/SensorReadings__b/fields/ReadingId__c.field-meta.xml
<CustomField>
    <fullName>ReadingId__c</fullName>
    <label>ReadingId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>