force-app/main/default/objects/SensorReadings__b/fields/ReadingType__c.field-meta.xml
<CustomField>
    <fullName>ReadingType__c</fullName>
    <label>ReadingType</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>