force-app/main/default/objects/SensorReadings__b/fields/ReadingValue__c.field-meta.xml
<CustomField>
    <fullName>ReadingValue__c</fullName>
    <label>ReadingValue</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>